# sbily

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.local.yml  docker-compose.production.yml  eslint.config.js  eslint.config.mjs  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  pyproject.toml  tailwind.config.ts  tsconfig.json
.envs.example/.local/: .django
.envs.example/.production/: .django
.envs/.local/: .django
.github/: renovate.json
.github/workflows/: ci.yml  pre-commit-autoupdate.yml
compose/local/django/: Dockerfile
compose/local/node/: Dockerfile
compose/production/django/: Dockerfile  start
compose/production/postgres/: Dockerfile
compose/production/traefik/: Dockerfile
config/: celery_app.py  urls.py
config/settings/: base.py  local.py  production.py
emails/: package.json  tsconfig.json
emails/components/: action.tsx  button.tsx  card.tsx  footer.tsx  header.tsx  layout.tsx  not-requested.tsx  text.tsx
emails/emails/: account-deleted.tsx  change-email.tsx  email-changed.tsx  monthly-link-limit-reset.tsx  password-changed.tsx  reset-password.tsx  sign-in-with-email.tsx  verify-email.tsx  welcome.tsx
requirements/: base.txt  local.txt  production.txt
rspack/: common.config.ts  dev.config.ts  prod.config.ts
sbily/authentication/: forms.py  tasks.py  urls.py  views.py
sbily/authentication/templates/: forgot_password.html  reset_password.html  sign_in.html  sign_in_with_email.html  sign_up.html
sbily/dashboard/: apps.py  urls.py  utils.py  views.py
sbily/dashboard/templates/: dashboard.html  link.html  links.html
sbily/links/: admin.py  context_processors.py  models.py  tasks.py  urls.py  utils.py  views.py
sbily/links/migrations/: 0009_linkclick.py  0010_alter_linkclick_options.py  0011_remove_shortenedlink_remove_at_and_more.py  0012_add_destination_url_nullable.py  0013_populate_destination_urls.py  0014_make_destination_url_required.py
sbily/links/templates/: dashboard.html  expired.html  home.html  link.html  links.html  plans.html
sbily/notifications/: views.py
sbily/notifications/templates/: my_notification.html  my_notifications.html
sbily/payments/: admin.py  apps.py  models.py  urls.py  utils.py  views.py  webhook.py
sbily/payments/migrations/: 0001_initial.py  0002_remove_payment_payment_type_delete_linkpackage.py  0003_alter_payment_transaction_id.py  0004_alter_subscription_price.py  0005_subscription_level.py  0006_alter_subscription_level.py  0007_subscription_stripe_subscription_schedule_id.py  0008_payment_invoice_url.py
sbily/payments/templates/: checkout.html  confirm_payment.html  setup_card.html  upgrade.html
sbily/src/: index.css  index.ts  types.ts  vendors.ts
sbily/src/chart/: chart.ts  countries-50m.json  dashboard.ts  index.ts  link-stats.ts  utils.ts
sbily/src/components/: addLoad.ts  breadcrumb.ts  dialog.ts  dropdownMenu.ts  priceToggle.ts  switch.ts  tabs.ts  themeToggle.ts  toast.ts
sbily/src/stripe/: confirm.ts  index.ts  prices.ts  purchase.ts  setup.ts  stripe.ts  upgrade.ts
sbily/src/utils/: copy.ts  isMobile.ts
sbily/templates/: 403.html  404.html  500.html  base.html
sbily/templates/dashboard/: base.html
sbily/templates/emails/: base.html
sbily/templates/forms/: form_snippet.html
sbily/templates/notifications/: monthly-link-limit-reset.md
sbily/templates/partials/: choose_plan_dialog.html  create_link_form.html  delete_link_dialog.html  (+5 more)
sbily/users/: admin.py  models.py  roles.py  tasks.py  urls.py  views.py  webhook.py
sbily/utils/: urls.py
(+27 files in other folders)
