[project]
name = "sbily"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
description = "A Django project for a link shortener."
readme = "README.md"
authors = [ { name = "Nicolas Contiero", email = "contact@ncontiero.com" }, ]
dependencies = [
    "python-slugify==8.0.4",
    "Pillow==11.3.0",
    "python-decouple==3.8",
    "argon2-cffi==25.1.0",
    "redis==6.4.0",
    "hiredis==3.2.1",
    "celery==5.5.3",
    "django-celery-beat==2.8.1",
    "flower==2.0.1",
    "markdown==3.9",
    "stripe==12.5.1",
    "ua-parser[regex]==1.0.1",
    "user-agents==2.2.0",
    "geoip2==5.1.0",
    "gunicorn==23.0.0",
    "psycopg[c]==3.2.10",
    "Collectfasta==3.3.1",

    "django==5.2.6",
    "django-cleanup==9.0.0",
    "dj-database-url==3.0.1",
    "django-redis==6.0.0",
    "django-webpack-loader==3.2.1",
    "django-storages[s3]==1.14.6",
    "django-anymail[brevo]==13.1",
]

[dependency-groups]
dev = [
    "Werkzeug[watchdog]==3.1.3",
    "psycopg[binary]==3.2.10",
    "watchfiles==1.1.0",
    "mypy==1.18.2",
    "django-stubs[compatible-mypy]==5.2.5",
    "ruff==0.13.1",
    "djlint==1.36.4",
    "pre-commit==4.3.0",

    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
]

# ==== mypy ====
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [ "mypy_django_plugin.main" ]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"


# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2


[tool.ruff]
target-version = "py313"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF"
]
ignore = [
    "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "SIM102", # sometimes it's better to nest
    "UP038" # Checks for uses of isinstance/issubclass that take a tuple
    # of types for comparison.
    # Deactivated because it can make the code slow:
    # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [ "UP038" ]

[tool.ruff.lint.isort]
force-single-line = true
